--- a/styles.css
+++ b/styles.css
@@ -77,3 +77,19 @@ li{
 
 p{
 }
+
+
+@media only screen and (max-width: 720px) {
+    html {
+        font-size: 18pt;
+
+    }
+
+    .intro{
+    	position: relative;
+    	padding-top:25%; 
+    	width: 90%;
+    	margin: 0 auto;
+    }
+
+}
