--- a/css/style.css
+++ b/css/style.css
@@ -13,14 +13,21 @@
 
 html
 {
-	background: url(../images/merl_landingpage_dark.png) no-repeat;
-	background-size: cover;
-	background-repeat: no-repeat;
 }
 
 body
 {
-	/*	background:black;*/
+	background:black;
+
+	background: url(../images/merl_landingpage_dark.png) no-repeat;
+	background-size: cover;
+	background-repeat: no-repeat;
+
+}
+
+a{
+	color: yellow;
+
 }
 
 
@@ -31,7 +38,8 @@ landing page css
 .landing-page
 {
 	height: 100vh;
-	margin: 20pt 50pt 0 90pt;
+	margin: 0 50pt 0 90pt;
+	padding-top: 20pt;
 }
 
 .merl-hero
@@ -45,7 +53,7 @@ landing page css
 	color: white;
 	font-family: fgrotesk;
 	font-size: 1.6em;
-	width: 550pt;
+	width: 580pt;
 	float: right;
 	position: absolute;
 	bottom: 20pt;
@@ -96,5 +104,44 @@ landing page css
 #number-3
 {
 	
+}
+
+@media only screen and (max-width:820px){
+
+	.welcome-text{
+		width: 75%;
+		bottom: 10pt;
+		right: 10pt;
+		padding: 2%;
+
+	}
+
+
+}
+
+@media only screen and (max-width:600px){
+
+	.welcome-text{
+		margin: 0 auto;
+		width: 90%;
+		padding: 2%;
+		font-size: 1.4em;
+	}
+
+	.numbers{
+		display: none;
+	}
+
+	.merl-hero{
+		margin: 0 auto;
+	}
+
+	.landing-page
+	{
+		height: 100vh;
+		margin: 0 auto;
+		padding: 20pt;
+	}
+
 }
 
